🔨 is_staff in response, added readonly mode on sensetive fields, writeonly on password
